: Added support to bookmark/monitor a set of bugs
: Added a simple UI to edit group permissions
: Added support to (re)edit a query
: Added support for sending smtp mail
: Made the group "User" less special
: Fixed some permissions related issues for project admins
: Added "priority" and "dependency" to the bug history
: Added the ability to update several bugs at once

-- 1.0 -- 3 Aug 2005
: Added links from project summary on home page (Phil Davis).
: Added display of the bug ids a bug blocks.
: Allow users to suppress the update email when changing a bug.
: Use localized strings in bug history.
: Allow users to override saved queries by saving a new query with the same
  name as an old one.
: Added client-side validation to admin pages.
: Allow admins to delegate power to developers, on a per-project basis.
: Added ability to disable all email sent from the system.
: Fixed a bug with not being able to change the name of the 'Developer' group.
: Added tracking of changes in priority to the bug history.
: You can now search on "additional comments" and "description".
: Added the ability to download to Excel
: Fixed a number of bugs
: Dropped Smarty

-- 0.9.1 -- 4 Jan 2003
: Fixed bugs with PostgreSQL

-- 0.9.0 -- 25 Oct 2002
: Replaced the mail function with one that encodes (i18n support).
: Added four additional fields for tracking bug information: Database type
  and version, Environment, Closed Version, To-be-closed Version.
: Removed English text from templates for better localization.
: Added option for sending emails MIME-encapsulated.
: Cleaned up HTML.
: Added list of saved queries to the home page and an option to disable that
  list.
: Updated translations.
: Cleaned up printing of bug detail page.
: Added required files from PEAR (DB.php, etc.) and Smarty to the distribution.
: Improved compatibility with IIS.
: Fixed various small bugs.

-- 0.8.2 -- 8 May 2002
: Fixed bugs with ordering by dates in the bug list, self-referencing URLs