@@ -10,6 +10,7 @@
 : Fixed some permissions related issues for project admins
 : Added "priority" and "dependency" to the bug history
 : Added the ability to update several bugs at once
+: Allow admins and project admins to delete bugs
 
 -- 1.0 -- 3 Aug 2005
 : Added links from project summary on home page (Phil Davis).
